--- a/tests/data/pluto_sedov/meta.yaml
+++ b/tests/data/pluto_sedov/meta.yaml
@@ -4,7 +4,7 @@ attrs:
   has_geometry: true
   geometry: cartesian
   dimensionality: 3
-  kind: pluto
+  kind: plutoVTK
   has_units: true
   units:
     length: 3.08567758e21 cm
